--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,16 +27,19 @@ services:
           memory: "80MB"
 
   api01: &api
-    image: eigr-labs/rinha-2025:0.0.1
+    image: ghcr.io/eigr/rinha-2025:0.0.1
     hostname: api01
     environment:
       - MIX_ENV=dev
-      - PROXY_ACTOR_SYSTEM_NAME=spawn-system
+      - PROXY_ACTOR_SYSTEM_NAME=rinha-system
+      - PROXY_CLUSTER_STRATEGY=gossip
+      #- SPAWN_SUPERVISORS_STATE_HANDOFF_CONTROLLER=db
+      - SPAWN_DISABLE_METRICS=true
       - PROXY_DATABASE_TYPE=mariadb
       - PROXY_DATABASE_HOST=db
       - PROXY_DATABASE_NAME=rinha
       - PROXY_DATABASE_PORT=3306
-      - PROXY_DATABASE_POOL_SIZE=10
+      - PROXY_DATABASE_POOL_SIZE=40
       - PROXY_DATABASE_USERNAME=rinha
       - PROXY_DATABASE_SECRET=rinha
       - SPAWN_STATESTORE_KEY=3Jnb0hZiHIzHTOih7t2cTEPEpY98Tu1wvQkPfq/XwqE=
@@ -49,20 +52,38 @@ services:
       - rinha-net
     depends_on:
       - db
-    deploy:
-      resources:
-        limits:
-          cpus: "0.45"
-          memory: "110MB"
+    # deploy:
+    #   resources:
+    #     limits:
+    #       cpus: "0.45"
+    #       memory: "110MB"
 
   api02:
     <<: *api
     hostname: api02
-    deploy:
-      resources:
-        limits:
-          cpus: "0.45"
-          memory: "110MB"
+    environment:
+      - MIX_ENV=dev
+      - PROXY_ACTOR_SYSTEM_NAME=rinha-system
+      - PROXY_CLUSTER_STRATEGY=gossip
+      - SPAWN_SUPERVISORS_STATE_HANDOFF_CONTROLLER=db
+      - SPAWN_DISABLE_METRICS=true
+      - PROXY_DATABASE_TYPE=mariadb
+      - PROXY_DATABASE_HOST=db
+      - PROXY_DATABASE_NAME=rinha
+      - PROXY_DATABASE_PORT=3306
+      - PROXY_DATABASE_POOL_SIZE=40
+      - PROXY_DATABASE_USERNAME=rinha
+      - PROXY_DATABASE_SECRET=rinha
+      - SPAWN_STATESTORE_KEY=3Jnb0hZiHIzHTOih7t2cTEPEpY98Tu1wvQkPfq/XwqE=
+      - PROXY_GRPC_PORT=8080
+      - HTTP_PORT=8082
+      - PROCESSOR_DEFAULT_URL=http://payment-processor-default:8080
+      - PROCESSOR_FALLBACK_URL=http://payment-processor-fallback:8080
+    # deploy:
+    #   resources:
+    #     limits:
+    #       cpus: "0.45"
+    #       memory: "110MB"
 
   lb:
     image: nginx:1.27.0-alpine
